fix: Remove recaptcha

--- a/index.html
+++ b/index.html
@@ -124,8 +124,7 @@
 
       <aside class="widget widget_contact">
         <h2 class="widget-title">Laissez moi un message</h2>
-
-        <form class="rsForm" action="recaptcha.php" method="post" data-captcha="true">
+        <form class="rsForm" action="php/mailsender.php" method="post">
           <div class="input-field">
             <label>Nom</label>
             <input type="text" name="rsName" value="">
@@ -790,7 +789,7 @@
                 <div class="section-box contact-form">
                   <h3>Laissez moi un message</h3>
 
-                  <form class="rsForm" action="recaptcha.php" method="post" data-captcha="true">
+                  <form class="rsForm" action="php/mailsender.php" method="post">
                     <div class="input-field">
                       <label>Nom</label>
                       <input type="text" name="rsName" value="">
