--- a/index.html
+++ b/index.html
@@ -39,13 +39,13 @@
   <meta name="twitter:image" content="https://franckdemoute.fr/img/uploads/preview.jpg" />
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-107380958-1"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-269KR09N7F"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag() { dataLayer.push(arguments); }
     gtag('js', new Date());
 
-    gtag('config', 'UA-107380958-1');
+    gtag('config', 'G-269KR09N7F');
   </script>
 
   <!-- Google Fonts -->
