fix: Update data

--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
                     <ul class="profile-list">
                       <li class="clearfix">
                         <strong class="title">Âge</strong>
-                        <span class="cont">25</span>
+                        <span class="cont">28</span>
                       </li>
                       <li class="clearfix">
                         <strong class="title">Ville</strong>
@@ -287,12 +287,15 @@
             </div>
 
             <div class="section-txt-btn">
-              <p><a class="btn btn-lg btn-border ripple" target="_blank"
-                  href="https://stackoverflow.com/story/zenoo">Developer Story</a></p>
-
-              <p>Hey! Je m'appelle Franck Demoute. Développeur Full-Stack de 25 ans.
-                Expérimenté dans toutes les étapes du développement Web et de la gestion serveur.
-                Habitué à coder en Javascript, Typescript, Java, PHP, CSS3, HTML5, SQL.</p>
+              <p><a class="btn btn-lg btn-border ripple discord" target="_blank"
+                  href="https://discord.com/">
+                  <picture>
+                    <source data-srcset="img_webp/uploads/logos/discord.webp" type="image/webp">
+                    <source data-srcset="img/uploads/logos/discord.png" type="image/png">
+                    <img class="lazyload discord-logo" data-src="img/uploads/logos/discord.png" title="Discord" alt="Discord" />
+                  </picture>
+                  zenoo
+                </a></p>
             </div>
           </div>
         </section>
@@ -396,34 +399,34 @@
                 <div class="grid-box">
                   <figure class="portfolio-figure">
                     <picture>
-                      <source data-srcset="img_webp/uploads/portfolio/obcom-thumbnail.webp" type="image/webp">
-                      <source data-srcset="img/uploads/portfolio/obcom-thumbnail.jpg" type="image/jpeg">
-                      <img class="lazyload" data-src="img/uploads/portfolio/obcom-thumbnail.jpg" alt="Obcom" />
+                      <source data-srcset="img_webp/uploads/portfolio/sostag-thumbnail.webp" type="image/webp">
+                      <source data-srcset="img/uploads/portfolio/sostag-thumbnail.jpg" type="image/jpeg">
+                      <img class="lazyload" data-src="img/uploads/portfolio/sostag-thumbnail.jpg" alt="Sostag" />
                     </picture>
                     <figcaption class="portfolio-caption">
                       <div class="portfolio-caption-inner">
-                        <h3 class="portfolio-title">Obcom.fr</h3>
+                        <h3 class="portfolio-title">Sostag.fr</h3>
                         <h4 class="portfolio-cat">Site</h4>
 
                         <div class="btn-group">
-                          <a class="btn-link" href="https://obcom.fr" target="_blank"><i
+                          <a class="btn-link" href="https://sostag.fr" target="_blank"><i
                               class="rsicon rsicon-link"></i></a>
-                          <a class="portfolioFancybox btn-zoom" data-fancybox-group="obcom"
-                            href="#portfolio-obcom"><i class="rsicon rsicon-eye"></i></a>
+                          <a class="portfolioFancybox btn-zoom" data-fancybox-group="sostag"
+                            href="#portfolio-sostag"><i class="rsicon rsicon-eye"></i></a>
                         </div>
                       </div>
                     </figcaption>
                   </figure>
 
                   <!-- Start: Portfolio Inline Boxes -->
-                  <div id="portfolio-obcom" class="fancybox-inline-box">
-                    <div class="inline-embed" data-embed-type="image" data-embed-url="img/uploads/portfolio/obcom.jpg">
+                  <div id="portfolio-sostag" class="fancybox-inline-box">
+                    <div class="inline-embed" data-embed-type="image" data-embed-url="img/uploads/portfolio/sostag.jpg">
                     </div>
                     <div class="inline-cont">
-                      <h2 class="inline-title">Obcom.fr</h2>
+                      <h2 class="inline-title">Sostag.fr</h2>
 
                       <div class="inline-text">
-                        <p>J'ai dirigé la remise au goût du jour du site de la société Obcom.<br>
+                        <p>J'ai dirigé la remise au goût du jour du site de la société Sostag.<br>
                           Le principal obstacle ici était de remonter dans les moteurs de recherche. Ce projet m'a donné
                           une rigueur d'optimisation du chargement des pages Web, requis pour le SEO.</p>
                       </div>
@@ -438,35 +441,35 @@
                 <div class="grid-box">
                   <figure class="portfolio-figure">
                     <picture>
-                      <source data-srcset="img_webp/uploads/portfolio/sostag-thumbnail.webp" type="image/webp">
-                      <source data-srcset="img/uploads/portfolio/sostag-thumbnail.jpg" type="image/jpeg">
-                        <img class="lazyload" data-src="img/uploads/portfolio/sostag-thumbnail.jpg" alt="Sostag" />
+                      <source data-srcset="img_webp/uploads/portfolio/scrapingbot-thumbnail.webp" type="image/webp">
+                      <source data-srcset="img/uploads/portfolio/scrapingbot-thumbnail.jpg" type="image/jpeg">
+                        <img class="lazyload" data-src="img/uploads/portfolio/scrapingbot-thumbnail.jpg" alt="ScrapingBot" />
                     </picture>
                     <figcaption class="portfolio-caption">
                       <div class="portfolio-caption-inner">
-                        <h3 class="portfolio-title">Sostag</h3>
-                        <h4 class="portfolio-cat">Application de gestion de déménagements</h4>
+                        <h3 class="portfolio-title">ScrapingBot</h3>
+                        <h4 class="portfolio-cat">API de scraping Web</h4>
 
                         <div class="btn-group">
-                          <a class="btn-link" href="https://sostag.herokuapp.com" target="_blank"><i
+                          <a class="btn-link" href="https://www.scraping-bot.io/" target="_blank"><i
                               class="rsicon rsicon-link"></i></a>
-                          <a class="portfolioFancybox btn-zoom" data-fancybox-group="sostag"
-                            href="#portfolio-sostag"><i class="rsicon rsicon-eye"></i></a>
+                          <a class="portfolioFancybox btn-zoom" data-fancybox-group="scrapingbot"
+                            href="#portfolio-scrapingbot"><i class="rsicon rsicon-eye"></i></a>
                         </div>
                       </div>
                     </figcaption>
                   </figure>
 
                   <!-- Start: Portfolio Inline Boxes -->
-                  <div id="portfolio-sostag" class="fancybox-inline-box">
+                  <div id="portfolio-scrapingbot" class="fancybox-inline-box">
+                    <div class="inline-embed" data-embed-type="image"
+                      data-embed-url="img/uploads/portfolio/scrapingbot.jpg"></div>
                     <div class="inline-cont">
-                      <h2 class="inline-title">Sostag - Gestion de déménagement</h2>
+                      <h2 class="inline-title">ScrapingBot - API de scraping Web</h2>
 
                       <div class="inline-text">
-                        <p>Cette application de d'administration de sociétés de déménagement est en développement
-                          continu.<br>
-                          Son utilisation quotidienne par de nombreuses agences impose une rigueur de développement et
-                          une écoute des utilisateurs.</p>
+                        <p>Ce service propose une API permettant de scraper les données publiques de la majorité des sites Web.<br>
+                          Son utilisation quotidienne par de nombreus clients internationaux impose une rigueur de développement et une évolution constante du service.</p>
                       </div>
                     </div>
                   </div>
@@ -479,38 +482,37 @@
                 <div class="grid-box">
                   <figure class="portfolio-figure">
                     <picture>
-                      <source data-srcset="img_webp/uploads/portfolio/clos-normand-thumbnail.webp" type="image/webp">
-                      <source data-srcset="img/uploads/portfolio/clos-normand-thumbnail.jpg" type="image/jpeg">
-                      <img class="lazyload" data-src="img/uploads/portfolio/clos-normand-thumbnail.jpg" alt="Clos Normand" />
+                      <source data-srcset="img_webp/uploads/portfolio/labrute-thumbnail.webp" type="image/webp">
+                      <source data-srcset="img/uploads/portfolio/labrute-thumbnail.jpg" type="image/jpeg">
+                      <img class="lazyload" data-src="img/uploads/portfolio/labrute-thumbnail.jpg" alt="LaBrute" />
                     </picture>
                     <figcaption class="portfolio-caption">
                       <div class="portfolio-caption-inner">
-                        <h3 class="portfolio-title">Clos-Normand.com</h3>
-                        <h4 class="portfolio-cat">E-Commerce</h4>
+                        <h3 class="portfolio-title">LaBrute.fr</h3>
+                        <h4 class="portfolio-cat">Jeu Web</h4>
 
                         <div class="btn-group">
-                          <a class="btn-link" href="https://clos-normand.com/" target="_blank"><i
+                          <a class="btn-link" href="https://brute.eternaltwin.org/" target="_blank"><i
                               class="rsicon rsicon-link"></i></a>
-                          <a class="portfolioFancybox btn-zoom" data-fancybox-group="clos-normand"
-                            href="#portfolio-clos-normand"><i class="rsicon rsicon-eye"></i></a>
+                          <a class="portfolioFancybox btn-zoom" data-fancybox-group="labrute"
+                            href="#portfolio-labrute"><i class="rsicon rsicon-eye"></i></a>
                         </div>
                       </div>
                     </figcaption>
                   </figure>
 
                   <!-- Start: Portfolio Inline Boxes -->
-                  <div id="portfolio-clos-normand" class="fancybox-inline-box">
+                  <div id="portfolio-labrute" class="fancybox-inline-box">
                     <div class="inline-embed" data-embed-type="image"
-                      data-embed-url="img/uploads/portfolio/clos-normand.jpg"></div>
+                      data-embed-url="img/uploads/portfolio/labrute.jpg"></div>
                     <div class="inline-cont">
-                      <h2 class="inline-title">Clos-Normand.com</h2>
+                      <h2 class="inline-title">LaBrute.fr</h2>
 
                       <div class="inline-text">
-                        <p>J'ai repris les rênes du site marchand de la Pépinière du Clos Normand pour l'actualiser.<br>
-                          La plus grosse difficulté était de travailler avec le framework déjà en place : Prestashop.
-                          Certaines limitations m'ont empêché de mettre à jour la version de Prestashop, me forçant à
-                          travailler avec une base assez bancale. La combinaison d'une refonte graphique et de divers
-                          ajustements ont permis de relancer la vente en ligne de la Pépinière.</p>
+                        <p>Suite à l'annonce de la fermeture des jeux Web MotionTwin,
+                          j'ai rejoint l'effort de préservation du groupe <a href="https://eternaltwin.org/" target="_blank">Eternal-Twin</a>.<br>
+                          En tant que responsable du développement de LaBrute, je suis investi dans la conception et l'évolution de ce redéveloppement.
+                          Mon rôle implique la supervision de l'ensemble du processus de développement, de la planification initiale à la mise en œuvre finale.</p>
                       </div>
                     </div>
                   </div>
@@ -756,7 +758,7 @@
             <h2 class="section-title">Bio</h2>
 
             <div class="section-box">
-              <p>Je m'appelle Franck Demoute. Je suis un développeur Full-Stack de 25 ans. J'ai commencé à coder dès
+              <p>Je m'appelle Franck Demoute. Je suis un développeur Full-Stack de 28 ans. J'ai commencé à coder dès
                 l'âge de 12 ans, en me formant seul avec un livre sur le XHTML. En y repensant, c'était très archaïque,
                 mais ça m'a introduit au monde du développement. Je suis très vite passé sur du HTML/CSS, qui me
                 permettait de créer tout ce que je pouvais imaginer. Mais ça ne suffisait pas, j'avais toujours envie
