fix: Change spotify to YT music

--- a/index.html
+++ b/index.html
@@ -775,7 +775,7 @@
                 toujours fait plaisir.</p>
               <p>J'aime développer dans le calme, en écoutant de la musique, ça m'aide à me concentrer sur la tâche en
                 cours. Je rassemble d'ailleurs les musiques que j'utilise pour coder dans cette <a
-                  href="https://open.spotify.com/user/zenoo0/playlist/4DL9EGxzyd3S14XWnX8fQp?si=s37Vnf3uRZ-tSl9JA7pzeA"
+                  href="https://music.youtube.com/playlist?list=PLSGOOVlZJseRRzY7_B8CjtjM0yIXixYvi&si=OwZKonF1wQNvz7T1"
                   target="_blank">playlist</a>.</p>
             </div>
           </div>
