fix: Auto update age

--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
                     <ul class="profile-list">
                       <li class="clearfix">
                         <strong class="title">Âge</strong>
-                        <span class="cont">28</span>
+                        <span id="age" class="cont">29</span>
                       </li>
                       <li class="clearfix">
                         <strong class="title">Ville</strong>
@@ -310,15 +310,29 @@
                 <div class="col-sm-6">
                   <div class="progress-bar">
                     <div class="bar-data">
-                      <span class="bar-title">Javascript</span>
-                      <span class="bar-value">95%</span>
+                      <span class="bar-title">Typescript</span>
+                      <span class="bar-value">100%</span>
                     </div>
                     <div class="bar-line">
-                      <span class="bar-fill" data-width="95%"></span>
+                      <span class="bar-fill" data-width="100%"></span>
                     </div>
                   </div>
                 </div>
 
+                <div class="col-sm-6">
+                  <div class="progress-bar">
+                    <div class="bar-data">
+                      <span class="bar-title">Javascript</span>
+                      <span class="bar-value">100%</span>
+                    </div>
+                    <div class="bar-line">
+                      <span class="bar-fill" data-width="100%"></span>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+              <div class="row">
                 <div class="col-sm-6">
                   <div class="progress-bar">
                     <div class="bar-data">
@@ -330,9 +344,7 @@
                     </div>
                   </div>
                 </div>
-              </div>
 
-              <div class="row">
                 <div class="col-sm-6">
                   <div class="progress-bar">
                     <div class="bar-data">
@@ -344,7 +356,9 @@
                     </div>
                   </div>
                 </div>
+              </div>
 
+              <div class="row">
                 <div class="col-sm-6">
                   <div class="progress-bar">
                     <div class="bar-data">
@@ -356,9 +370,7 @@
                     </div>
                   </div>
                 </div>
-              </div>
 
-              <div class="row">
                 <div class="col-sm-6">
                   <div class="progress-bar">
                     <div class="bar-data">
@@ -367,18 +379,6 @@
                     </div>
                     <div class="bar-line">
                       <span class="bar-fill" data-width="85%"></span>
-                    </div>
-                  </div>
-                </div>
-
-                <div class="col-sm-6">
-                  <div class="progress-bar">
-                    <div class="bar-data">
-                      <span class="bar-title">Photoshop</span>
-                      <span class="bar-value">60%</span>
-                    </div>
-                    <div class="bar-line">
-                      <span class="bar-fill" data-width="60%"></span>
                     </div>
                   </div>
                 </div>
